<resources>
    <string name="app_name">ApplicationGithubUser</string>
    <string name="user_name">user_name</string>
    <string name="full_name">full_name</string>
    <string name="location">location</string>
    <string name="company">Google</string>
    <string name="search">search</string>


    <string name="search_hint">Masukkan nama</string>
    <string name="followers">Followers</string>
    <string name="followings">Followings</string>
    <string name="total_repositories">Total Repositories</string>
    <string name="change_language_settings">Change Language Settings</string>
    <string name="change_settings">Favorites</string>
    <string name="_2500350">2500350</string>
    <string name="todo">TODO</string>
    <string name="back_to_main_menu">Back to main menu</string>
    <string name="welcome_message">Hi, Welcome to Application Github User Made by Ivan \n Please use search feature.</string>
    <string name="dailyreminder">Set a Daily Reminder</string>
    <string name="nofavorites">There is no favorites</string>
    <string name="favorite_delete_success">Delete favorite success</string>
    <string name="favorite_add_success">Add favorite success</string>
    <string name="no_favorites">No Favorites</string>
    <string name="reminder">Good Morning, Do not forget to open Github Application</string>
    <string name="alarmsetup">Daily reminder set up</string>
    <string name="repeating_alarm_cancel">Daily reminder Cancelled</string>
    <string name="Status_Bar_Main">Github User</string>
    <string name="splash_message">This GitHub Application is made by \n Ivan Surya H</string>
    <string name="search_user">Search some users in search bar</string>
    <string name="appwidget_text">Favorites</string>
    <string name="empty_text">No Favorites</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->

    <string name="attachment_summary_on">Turn off daily reminder every 09.00
    </string>
    <string name="attachment_summary_off">Turn on daily reminder every 09.00 AM</string>
    <string name="attachment_title">Daily Reminder</string>
    <string name="advanced_setting">Advanced Setting</string>
    <string name="reminded">reminded</string>

</resources>